# payments

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  SUBTREE.md
data/: subscription.db
migrations/: 00001_initial_schema.sql
src/: config.rs  error.rs  main.rs
src/api/: entitlements.rs  mod.rs  products.rs  subscriptions.rs  users.rs
src/db/: mod.rs
src/db/models/: entitlement.rs  mod.rs  product.rs  subscription.rs  user.rs
src/providers/: apple.rs  google.rs  mod.rs
src/utils/: mod.rs
src/webhooks/: apple.rs  google.rs  mod.rs
