[package]
name = "nuxie-payments"
version = "0.1.0"
edition = "2021"
description = "Open source subscription management backend for mobile apps"
authors = ["Levi McCallum <levi@nuxie.io>"]
license = "MIT"

[dependencies]
# Web framework
axum = "0.7.2"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
tokio = { version = "1.35.0", features = ["full"] }
hyper = "1.0.0"

# Database
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "json", "chrono"] }

# Async utilities
async-trait = "0.1.74"
futures = "0.3.29"

# Serialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# Error handling
thiserror = "1.0.50"
anyhow = "1.0.75"

# Logging & tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"

# Authentication & Security
jsonwebtoken = "9.1.0"
argon2 = "0.5.2"
rand = "0.8.5"

# HTTP client
reqwest = { version = "0.11.22", features = ["json", "rustls-tls"] }

# Environment & Config
dotenv = "0.15.0"
config = "0.13.4"

# Time handling
chrono = { version = "0.4.31", features = ["serde"] }
time = "0.3.30"

# Validation
validator = { version = "0.16.1", features = ["derive"] }

# Utilities
uuid = { version = "1.6.1", features = ["v4", "serde"] }
once_cell = "1.19.0"

[dev-dependencies]
mockall = "0.11.4"
wiremock = "0.5.22"
tokio-test = "0.4.3"
